--- a/index.html
+++ b/index.html
@@ -61,8 +61,6 @@
         .legend {
             padding: 6px 8px;
             font-size: 1em;
-            /* background: rgba(255, 255, 255, 0.8);
-            background: whitesmoke;  */
             box-shadow: 0 0 5px;
             border-radius: 5px;
             font-family: Lato, sans-serif;
@@ -105,9 +103,7 @@
 
     <footer>
         <p>Map authored by Sebastian Hancock</p>
-        <p>This map shows the percentage of vacant housing in each county of Kentucky. The percentage was calculated by diving the number of vacancies per county by the total number of housing units per county.</p>
-        <p>The symbology of the map absolutely influences and distorts the representation of the data. All maps distort data to some extent, especially choropleth maps. Just by using a red color scheme, the viewer is influeced to think that a higher vacany is a negative statistic (which, frankly, it is most of the time). The breaks, or groups, also distort the representation by lumping together counties that might have a 4% difference in vacancy. At the same time, the breaks also make it easier to understand the data. Symbology is about managing the distortion of data and trying to represent it as realistically and succinctly as possible.</p>
-        <p>The map could certainly be used to argue a point of a view, however, by itself it does not. Maybe The local government of Lyon County could use this map to petition the state government for more state-sponsored economic development programs that would bring people to the area. A real estate company could use this map to argue which counties they should be focusing their efforts on. </p>
+        <p>This map shows the percentage of vacant housing in each county of Kentucky.</p>
     </footer>
 
     <script>
