--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset=utf-8 />
-    <title>Lab 01 Template</title>
+    <title>Vacant Housing Units in Kentucky Counties</title>
     <meta name='viewport' content='initial-scale=1,maximum-scale=1,user-scalable=no' />
 
     <link rel="stylesheet" href="https://unpkg.com/leaflet@1.0.1/dist/leaflet.css" />
@@ -95,7 +95,7 @@
 
 <body>
     <header>
-        <h1>Percentage of Housing Units That Are Vacant In Kentucky Counties</h1>
+        <h1>Percentage of Vacant Housing Units in Kentucky Counties</h1>
 
     </header>
 
@@ -103,7 +103,7 @@
 
     <footer>
         <p>Map authored by Sebastian Hancock</p>
-        <p>This map shows the percentage of vacant housing in each county of Kentucky.</p>
+        <p>This map shows the percentage of vacant housing units in each county of Kentucky.</p>
     </footer>
 
     <script>
