--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta name='viewport' content='initial-scale=1,maximum-scale=1,user-scalable=no' />
 
     <link href="https://unpkg.com/leaflet@1.0.1/dist/leaflet.css" rel="stylesheet">
-    <link href='http://fonts.googleapis.com/css?family=Lato' rel='stylesheet' type='text/css'>
+    <link href='https://fonts.googleapis.com/css?family=Lato' rel='stylesheet' type='text/css'>
     <link href="css/style.css" rel='stylesheet'>
 
     <script src="https://unpkg.com/leaflet@1.0.1/dist/leaflet.js"></script>
